# lab

./: .prettierrc.yaml  README.md
bash/: cheat_sheet.sh
c/: README.md
c/001_hello_world/: hello.c
c/002_hello_world_improved/: hello.c
c/003_printf/: hello.c
c/004_swap/: swap.c
c/005_scope/: scope.c
c/006_storage_duration/: sd.c
c/007_alignment/: alignment.c
c/008_object_types/: ot.c
c/hello_improved/: hello_world.c
c/hello_world/: hello_world.c
c/swap_integers/: swap_integers.c
cpp/gdb/: .gitignore  Makefile  gdb_example  main.cpp
cpp/hello_world/: Makefile  hello_world  main.cpp
devops/dftd/: .gitignore  Makefile  README.md  Vagrantfile
devops/dftd/ansible/: pam_pwquality.yml  secrets.yml  site.yml  user_and_group.yml
devops/dftd/scripts/: create-secrets-file.sh  (+4 more)
go/3dcube/: go.mod  main.go
go/auth/: Makefile  go.mod  go.sum
go/cli/: README.md  go.mod  go.sum
go/consistent_hashing/: main.go
go/dtid/: dtid.go  dtid_test.go  go.mod
go/notes/: go.mod  go.sum
k8s/: README.md  Vagrantfile
k8s/ansible/: main.yml
kafka/: README.md  docker-compose.yaml
kafka/prometheus/: prometheus.yml  rules.yml
python/: README.md
python/pcs/: README.md  pcs.py
python/uv/: .envrc  .gitignore  Makefile  README.md  pyproject.toml
python/uv/src/hello_svc/: views.py
python/uv/tests/: test_e2e.py
zig/: Makefile  README.md  difference_of_squares_for.zig  leap_year.zig
zig/difference_of_squares/: difference_of_squares.zig
zig/egg_count/: egg_count.zig
zig/hello_world/: Makefile  build.zig
zig/leap_year/: Makefile
(+34 files in other folders)
