[project]
name = "hello-svc"
version = "0"
requires-python = "==3.13.*"
dependencies = [
  "fastapi",
  "granian",
  "stamina",
]

[dependency-groups]
dev = [
  "fastapi[standard]",
  "pytest",
  "coverage",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
parallel = true
source = ["hello_svc", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
